# auth-service

./: .dockerignore  .example.env  .gitignore  Cargo.toml  LICENSE.md  README.md  build.sh  docker-compose.yaml
.docker/auth-service/: Dockerfile
.docker/auth-service/development/: Dockerfile
.docker/sqlx-cli/: Dockerfile
.github/workflows/: rust.yml
migrations/: 0001_create_account_table.sql  0001_create_user_table.sql
src/: error.rs  exception.rs  lib.rs  main.rs  result.rs
src/bo/: account_bo.rs  mod.rs
src/dto/: account_dto.rs  authenticate_dto.rs  form_dto.rs  mod.rs  update_dto.rs
src/entity/: account_entity.rs  mod.rs
src/form/: auth.rs  mod.rs  register.rs
src/model/: account.rs  mod.rs
src/service/: account_service.rs  accounts.rs  mod.rs
src/transaction/: account_transaction.rs  mod.rs
tests/: insomnia_auth_service.json
tests/insomnia/: api_user.json  api_user_login.json  api_user_register.json
