[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
sqlx = { version =  "0.7.1" , features = ["postgres", "runtime-tokio"] }
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
validator = { version = "0.15", features = ["derive"] }
actix-web = "4.4.0"
anyhow = "1.0.75"
bcrypt = "0.15"
chrono = "0.4.31"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
derive_more = "0.99.17"
