[package]
name    = "auth-service"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web      = { version = "4.4.0"   }
bcrypt         = { version = "0.15"    }
dotenv         = { version = "0.15.0"  }
dotenv_codegen = { version = "0.15.0"  }
derive_more    = { version = "0.99.17" }
env_logger     = { version = "0.10.1"  }
serde          = { version = "1.0.188" , features = ["derive"]                              }
sqlx           = { version =  "0.7.1"  , features = ["postgres", "runtime-tokio"]           }
uuid           = { version = "1.4.1"   , features = ["v4", "fast-rng", "macro-diagnostics"] }
validator      = { version = "0.15"    , features = ["derive"]                              }
